unpackaged/main/default/objects/ffct__OAuthSetting__c/ffct__OAuthSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Consultant Tools OAuth Setting</label>
</CustomObject>