unpackaged/main/default/objects/ffct__OAuthSetting__c/fields/ffct__ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ffct__ClientSecret__c</fullName>
    <label>ClientSecret</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>