unpackaged/main/default/objects/ffct__OAuthSetting__c/fields/ffct__Tools_Version_For_Push_Provision__c.field-meta.xml
<CustomField>
    <fullName>ffct__Tools_Version_For_Push_Provision__c</fullName>
    <description>DEPRECATED</description>
    <inlineHelpText>Enter the latest available version of the Consultant Tools</inlineHelpText>
    <label>Tools Version For Push Provision Feature</label>
    <length>40</length>
    <type>Text</type>
</CustomField>